--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "generate": "nuxt generate",
     "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "lint": "yarn lint:js",
-    "test": "jest"
+    "test": "jest",
+    "test:watch": "jest --watchAll",
+    "test:coverage": "jest --coverage"
+
   },
   "lint-staged": {
     "*.{js,vue}": "eslint"
