--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "test": "jest",
     "test:watch": "jest --watchAll",
     "test:coverage": "jest --coverage"
-
   },
   "lint-staged": {
     "*.{js,vue}": "eslint"
@@ -32,6 +31,7 @@
     "@nuxtjs/eslint-config": "^3.1.0",
     "@nuxtjs/eslint-module": "^2.0.0",
     "@nuxtjs/tailwindcss": "^3.0.2",
+    "@types/jest": "^27.4.0",
     "@vue/test-utils": "^1.1.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
